--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,17 @@
+body {
+    font-size: 133%;
+    font-family: sans-serif;
+    background-color: rgb(227, 237, 205)
+}
+
 h1 {
-    color: yellowgreen;
+    color: darkorchid;
+}
+
+img.align-right {
+    float: right; margin-left: 0%;
+}
+
+h4 {
+    color: darkorchid;
 }
