navigation of theme

--- a/theme/themestyles.css
+++ b/theme/themestyles.css
@@ -14,12 +14,31 @@ p.byline {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+nav {        
+    background-color: aliceblue;
+    border: 1px green solid;
+    padding: 8px;
+    margin: -1px 0px 0px 0px;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    
+}
+
+nav li {
+    display: inline;
+    padding: 8px;    
+}
+
 main {
 background-color: red;
 }
 
 figure.left {
-    float: left;
+    float: right;
 }
 
 footer {
