--- a/theme/themestyles.css
+++ b/theme/themestyles.css
@@ -1,11 +1,13 @@
 header {
-    background-color: white;
+    background-color: steelblue;
     text-align: center;
+
 }
 
 header p {
     font-weight: bold;
     color: blue;
+    text-emphasis-color: white;
 }
 
 p.byline {
@@ -14,11 +16,20 @@ p.byline {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+.subpage-header{
+    text-align: left;
+}
+
+.subpage-text{
+    text-align: left;
+}
+
 nav {        
     background-color: aliceblue;
     border: 1px green solid;
     padding: 8px;
     margin: -1px 0px 0px 0px;
+    text-align: center;
 }
 
 nav ul {
@@ -34,14 +45,16 @@ nav li {
 }
 
 main {
-background-color: red;
+background-color: crimson;
+text-align: center;
 }
 
 figure.left {
-    float: right;
+    float: center;
 }
 
+
 footer {
-    background-color: blue;
+    background-color: steelblue;
     text-align: center;
 }
