from class css for final
from class css for final

--- a/basic.css
+++ b/basic.css
@@ -1,7 +1,7 @@
 body {
     font-size: 133%;
     font-family: sans-serif;
-    background-color: rgb(227, 237, 205);
+    background-color: lightblue;
 }
 
 h1 {
